<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AromasActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/txtId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/Aromas_Id"
        app:layout_constraintEnd_toStartOf="@+id/edId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/Aromas_HintId"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/Aromas_Nombre"
        app:layout_constraintEnd_toStartOf="@+id/etNombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtId" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Aromas_HintNombre"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edId" />

    <TextView
        android:id="@+id/txtMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/Aromas_Marca"
        app:layout_constraintEnd_toStartOf="@+id/etMarca"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/etMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Aromas_HintMarca"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNombre" />

    <TextView
        android:id="@+id/txtTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/Aromas_Tipo"
        app:layout_constraintEnd_toStartOf="@+id/spTipo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMarca" />

    <Spinner
        android:id="@+id/spTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="132dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMarca" />

    <TextView
        android:id="@+id/txtPorcentaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:text="@string/Aromas_Porcentaje"
        app:layout_constraintEnd_toStartOf="@+id/etPorcentaje"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTipo" />

    <EditText
        android:id="@+id/etPorcentaje"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Aromas_HintPorcentaje"
        android:inputType="number"
        android:maxLength="3"
        android:text="@string/Aromas_Valor_0"
        app:layout_constraintEnd_toStartOf="@+id/sbPorcentaje"
        app:layout_constraintTop_toBottomOf="@+id/spTipo" />

    <SeekBar
        android:id="@+id/sbPorcentaje"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="36dp"
        android:max="100"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTipo" />

    <TextView
        android:id="@+id/txtMinMaceracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:text="@string/Aromas_MinMaceracion"
        app:layout_constraintEnd_toStartOf="@+id/etMinMaceracion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPorcentaje" />

    <EditText
        android:id="@+id/etMinMaceracion"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Aromas_HintMinMaceracion"
        android:inputType="number"
        android:maxLength="1"
        android:text="@string/Aromas_Valor_0"
        app:layout_constraintEnd_toStartOf="@+id/sbMinMaceracion"
        app:layout_constraintTop_toBottomOf="@+id/etPorcentaje" />

    <SeekBar
        android:id="@+id/sbMinMaceracion"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="@dimen/SeekBar"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="42dp"
        android:max="8"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbPorcentaje" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/Aromas_Semanas"
        app:layout_constraintEnd_toStartOf="@+id/etMinMaceracion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMinMaceracion" />

    <TextView
        android:id="@+id/txtMaxMaceracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:text="@string/Aromas_MaxMaceracion"
        app:layout_constraintEnd_toStartOf="@+id/etMaxMaceracion"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/Aromas_Semanas"
        app:layout_constraintEnd_toStartOf="@+id/etMaxMaceracion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMaxMaceracion" />

    <EditText
        android:id="@+id/etMaxMaceracion"
        android:layout_width="@dimen/Numeros"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Aromas_HintMinMaceracion"
        android:inputType="number"
        android:maxLength="1"
        android:text="@string/Aromas_Valor_0"
        app:layout_constraintEnd_toStartOf="@+id/sbMaxMaceracion"
        app:layout_constraintTop_toBottomOf="@+id/etMinMaceracion" />

    <SeekBar
        android:id="@+id/sbMaxMaceracion"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="@dimen/SeekBar"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="42dp"
        android:max="8"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sbMinMaceracion" />

    <Button
        android:id="@+id/btnAnadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/Aromas_btnAnadir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnModificar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnModificar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="36dp"
        android:text="@string/Aromas_btnModificar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEliminar" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Aromas_btnBorrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/btnAnadir"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>